--- a/create-orphanage.html
+++ b/create-orphanage.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="./public/css/sidebar.css" />
     <link rel="stylesheet" href="./public/css/map-create-orphanage.css" />
     <link rel="stylesheet" href="./public/css/form.css" />
+    <link rel="stylesheet" href="./public/css/buttons.css" />
 
     <link rel="stylesheet" href="
     <link
@@ -65,30 +66,37 @@
 
             <div class="input-block">
               <label for="name">Nome</label>
-              <input id="name" name="name" />
+              <input id="name" name="name" required/>
             </div>
 
             <div class="input-block">
               <label for="Sobre"
                 >Sobre <span>Máximo de 300 catacteres</span></label
               >
-              <textarea name="about" id="about"></textarea>
+              <textarea name="about" id="about" required></textarea>
             </div>
 
             <div class="input-block">
               <label for="whatsapp">Número de whatsapp</label>
-              <input name="whatsapp" id="whatsapp" />
+              <input name="whatsapp" id="whatsapp" placeholder="(99) 99999-9999" required/>
             </div>
 
             <div class="input-block images">
               <label for="images">Foto</label>
 
               <div class="images-upload" id="images">
-                <input name="images" placeholder="Cole o link da foto aqui" />
-                <button type="button">
-                  <img src="./public/images/add-file.svg" alt="Nova imagem" />
-                </button>
+                <div class="new-upload">
+                  <input name="images" placeholder="Cole o link da foto aqui" required />
+                  <span
+                    ><img
+                      src="./public/images/remove-file.svg"
+                      alt="Remover Fotos"
+                  /></span>
+                </div>
               </div>
+              <button type="button">
+                <img src="./public/images/add-file.svg" alt="Nova imagem" />
+              </button>
             </div>
           </fieldset>
 
@@ -97,12 +105,12 @@
 
             <div class="input-block">
               <label for="instructions">Instruções</label>
-              <textarea name="instruction" id="instructions"></textarea>
+              <textarea name="instruction" id="instructions" required></textarea>
             </div>
 
             <div class="input-block">
               <label for="opening_hours">Horários das visitas</label>
-              <input id="opening_hours" name="opening_hours" />
+              <input id="opening_hours" name="opening_hours" required />
             </div>
 
             <div class="input-block">
